[gd_scene load_steps=6 format=2]

[ext_resource path="res://Graphics/tileset_legacy_trans.png" type="Texture" id=1]
[ext_resource path="res://Scripts/QuestionBlock.gd" type="Script" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 0.65
height = 1.0

[sub_resource type="Animation" id=2]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.4, 0.266667, 0, 1 ), Color( 0.866667, 0.533333, 0.333333, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.75, 0.75, 0.75 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "PickedUp"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.533333, 0.333333, 1 ), Color( 0.4, 0.266667, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.75, 0.75, 0.75 ) ]
}

[node name="QuestionBlock" type="Area"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.628881, 0 )
modulate = Color( 0.866667, 0.533333, 0.333333, 1 )
opacity = 0.6
pixel_size = 0.08
billboard = 1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 391, 17, 16, 16 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="Timers" type="Node" parent="."]

[node name="RespawnTimer" type="Timer" parent="Timers"]
wait_time = 16.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/PickedUp = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="onBodyEntered"]
[connection signal="timeout" from="Timers/RespawnTimer" to="." method="onRespawnTimerTimeout"]
